--- a/alumni_website/templates/mentorship/mentor_signup.html
+++ b/alumni_website/templates/mentorship/mentor_signup.html
@@ -32,7 +32,7 @@
     <input type="email" id="email" name="email" required value="{{ user.email }}">
 
     <label>Industry / Field</label>
-    <input type="text" id="industry" name="industry" required value="{{ profile.career }}">
+    <input type="text" id="industry" name="industry" required value="{{ profile.major_uni }}">
 
     <label>Years of Experience</label>
     <input type="number" id="experience" name="experience" min="0" required>
