--- a/alumni_website/static/core/css/css.css
+++ b/alumni_website/static/core/css/css.css
@@ -1,14 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@600&display=swap');
 
 
+
+:root {
+  --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --heading-font: "Raleway", sans-serif;
+  --nav-font: "Poppins", sans-serif;
+}
+
+:root {
+  --background-color: #ffffff;
+  --secondary-background-color: #f1f5f7;
+  --heading-color: #2d465e;
+  --accent-color: #761728;
+  --subtitle: #666;
+}
+
+
 body {
-  background-color: #FFFDD0;
+  background-color: var(--secondary-background-color);
   font-family: 'Open Sans', sans-serif;
   color: #2c2c2c;
 }
 
-.bg-maroon {
-  background-color: #4e1002 !important;
+.nav {
+  background-color: var(--nav-background-color) !important;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .bg-maroon-light {
@@ -57,4 +74,11 @@ h3 {
   font-size: 1.3rem;
   color: #4e1002;
 }
+
+
+
+
+
+
+
 
