--- a/alumni_website/templates/authentication/sign_up.html
+++ b/alumni_website/templates/authentication/sign_up.html
@@ -12,6 +12,14 @@
 
 {% block main %}
 
+    {% if messages %}
+        <div class="alert alert-danger">
+            {% for message in messages %}
+                <p>{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <div class="main-content">
     <div class="container container-form">
         <div id="logoContainer">
