--- a/alumni_website/templates/layout.html
+++ b/alumni_website/templates/layout.html
@@ -8,11 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="{%  static 'core/css/css.css'  %}" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!--AOS-->
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
+    <!-- PureCounter-->
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
+
     {% block extra_css %}{% endblock %}
     <title>{% block title %}Home{% endblock %}</title>
   </head>
 <body>
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark bg-maroon">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark nav">
     <div class="container-fluid">
       <a class="navbar-brand" href="#" target="_blank"><img src="{% static 'images/school_logo.avif' %}" alt="Logo" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -72,6 +80,16 @@
   </div>
 
   {% block javascript %}{% endblock %}
+  <script>
+
+  // Initialize AOS 
+  AOS.init({
+    once: true, 
+          });
+
+  // Initialize Purcounter
+  new PureCounter();
+</script>
 </body>
 
 </html>
